# datashark-cli

./: README.md  datashark.dist.yml  pyproject.toml  setup.cfg
datashark_cli/: __init__.py  agent_api.py  main.py  recipe_api.py
datashark_cli/command/: __init__.py  agents.py  aliases.py  cook.py  find.py  info.py  process.py  processors.py
ds_cli/: __init__.py  __version__.py  main.py
example/: timeline.vars.yaml  timeline.yaml
