[metadata]
url = https://github.com/koromodako/datashark-cli
author = koromodako
author_email = koromodako@gmail.com
name = datashark-cli
description = Datashark CLI
long_description = file: README.md, LICENSE
keywords = datashark, cli
classifiers =
    Development Status :: 4 - Beta
    Framework :: Datashark
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Security
    Topic :: Utilities

[options]
packages = find:
install_requires =
    aiohttp
    datashark-core

[options.entry_points]
console_scripts =
    datashark = datashark_cli.main:app
